--- a/app/src/main/res/layout/release_preview_item.xml
+++ b/app/src/main/res/layout/release_preview_item.xml
@@ -34,6 +34,18 @@
         android:textAppearance="@style/TextAppearance.Nyaasi.ReleasePreviewDate"
         tools:text="Release date: Today" />
 
+    <TextView
+        android:id="@+id/release_size"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="@style/TextAppearance.Nyaasi.ReleaseTitle"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/release_title"
+        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/release_date"
+        tools:text="Size: 1.2 GB" />
+
     <ImageButton
         android:id="@+id/magnet_btn"
         android:layout_width="wrap_content"
