--- a/app/src/main/res/layout/release_preview_item.xml
+++ b/app/src/main/res/layout/release_preview_item.xml
@@ -38,12 +38,13 @@
         android:id="@+id/release_size"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="@style/TextAppearance.Nyaasi.ReleaseTitle"
+        android:textAppearance="@style/TextAppearance.Nyaasi.ReleaseTrackerSheet.ModeDescription"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@id/release_title"
-        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/release_date"
+        app:layout_constraintTop_toBottomOf="@id/release_title"
+        app:layout_constraintVertical_bias="0.0"
         tools:text="Size: 1.2 GB" />
 
     <ImageButton
